--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ a{
     justify-content: space-between;
     padding: 25px 9%;
     z-index: 100;
-    background-color: #7cf03d;
+    background-color: #7cf03d72;
 }
 .navbar .logo {
     font-size: 30px;
@@ -45,59 +45,79 @@ a{
 .navbar ul li .active a{
     color: #1f242d;
 }
-.home{
+/* start home section */
+#home{
+    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
+    padding: 0 30px;
+}
+#home .container{
+    width: 90%;
+}
+#home .home-content {
+    display: flex;
+    justify-content: space-between;
     height: 100vh;
-    color: #fff;
-    padding: 50px 9%;
+    flex-wrap: wrap;
 }
-.home-info h1{
-    font-size: 55px;
+#home .home-content .home-left {
+    width: 50%;
+    height: 100%;
+    margin-inline-start: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.home-info h2{
-    display: inline-block;
-    font-size: 32px;
-    margin-top: 3px;
-}
-.home-info h2 span{
-    position: relative;
-    display: inline-block;
-    color: transparent;
-    -webkit-text-stroke: 0.7px #7cf03d;
-    animation-delay: calc(-4s * var(--i));
-}
-@keyframes display-text {
-    25%,100%{
-        display: none;
-    }
-    
-}
-.home-info h2 span::before{
-    content: attr(data-text);
-    position: absolute;
-    width: 0;
-    border-right: 2px solid #7cf03d ;
+#home .home-content .home-left .home-info h3 {
+    margin: 20px 0;
     color: #7cf03d;
-    white-space: nowrap;
-    overflow: hidden;
-    animation: fill-text 4s linear infinite;
+    font-size: 35px;
 }
-@keyframes fill-text{
-    10%,100%{
+#home .home-content .home-left .home-info p{
+    color: #fff;
+}
+#typing-effect {
+    font-weight: bold;
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 2px solid #7cf03d;
+    animation: typing 3s steps(20, end), blink 0.5s step-end infinite alternate;
+}
+@keyframes typing {
+    0% {
         width: 0;
     }
-    70%,90%{
-        width: 100%;
+    100% {
+        width: 15ch;
     }
 }
-.home-info p{
-    font-size: 16px;
-    margin: 10px 0 25px;
+@keyframes blink {
+    0% {
+        border-right-color: transparent;
+    }
+    100% {
+        border-right-color: #7cf03d;
+    }
 }
-.home-info .btn-sci{
+#home .home-content .home-img {
+    width: 45%;
+    height: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
+}
+#home .home-content .home-img img {
+    width: 70%;
+    border-radius: 15px;
+    border: 3px solid #7cf03d;
+}
+.home-info .social{
+    padding-top: 10px;
+}
+.main .right-item a{
+    margin-top: 10px;
 }
 .btn{
     display: inline-block;
@@ -110,6 +130,7 @@ a{
     font-weight: 600;
     color: black;
     transition:all 0.5s;
+    margin-top: 10px;
 }
 .btn:hover{
     background: transparent;
@@ -134,169 +155,307 @@ a{
     color: #1f242d;
     box-shadow: 0 0 10px #7cf03d;
 }
-.home-img .img-box{
-    width: 32vw;
-    height: 32vw;
-    border-radius: 50%;
-    padding: 5px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-.home-img .img-box::before,
-.home-img .img-box::after{
-    content: '';
-    position: absolute;
-    width: 500px;
-    height: 500px;
-    background: conic-gradient(transparent,transparent,transparent,#7cf03d);
-    transform: rotate(0deg);
-    animation: rotate-border 10s linear infinite;
-}
-@keyframes rotate-border{
-    100%{
-        transform: rotate(360deg);
+
+@media (min-width: 1200px) {
+    .home-info {
+        max-width: 1140px;
     }
 }
-.home-img .img-box .img-item{
-    width: 100%;
-    height: 100%;
-    background-color:#1f242d;
-    border-radius: 50%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    z-index: 1;
-    border: 0.1 solid #1f242d;
+@media (min-width: 992px) {
+    .home-info {
+        max-width: 960px;
+    }
 }
-.home-img .img-box .img-item img{
-    position: absolute;
-    top: 30px;
-    display: block;
-    width: 85%;
-    object-fit: cover;
-    mix-blend-mode: lighten;
+@media (min-width: 768px) {
+    .home-info {
+        max-width: 720px;
+    }
 }
+@media (min-width: 576px) {
+    .home-info{
+        max-width: 540px;
+        flex-direction: column;
+    }
+}
+/* end home section */
 /* strat about me */
-.section-title{
-    text-align: center;
-    margin: 0 auto;
-    color: #fff;
-    font-size: 40px;
-    cursor: pointer;
-    transition: all 0.5s;
-}
-.section-title:hover{
-    font-size: 45px;
-}
-.section-title span{
-    color: #7cf03d;
-}
-.about-me{
-    width: 100%;
-    background-color: #1f242d;
-    padding: 0 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.about-me .container{
-    width: 90%;
-    display: flex;
-}
-.about-img img{
-    width: 32vw;
-    height: 32vw;
-    border-radius: 50%;
-    border: 3px solid #7cf03d;
-}
-.content h3{
-    color: #fff;
-    padding-top: 30px;
-    font-size: 25px;
-    margin-left: 30px;
-
-}
-.content p{
-    color: #fff;
-    line-height: 30px;
-    margin-left: 30px;
-}
-.content p i{
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-.btns{
-    margin-left: 40px;
-    margin-top: 40px;
-}
-/* end section about me */
-/* start section skills */
-.section-skills{
-    margin-top: 50px;
-}
-.skills{
-    text-align: center;
-    margin: 0 auto;
-    color: #fff;
-    font-size: 40px;
-    cursor: pointer;
-    transition: all 0.5s;
-    margin-top: 50px;
-}
-.skills:hover{
-    font-size: 45px;
-}
-.skills span{
-    color: #7cf03d;
-}
-.section-skills{
+.about{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0 30px;
 }
-.section-skills .container{
+.about .container{
     width: 90%;
+}
+.main{
     display: flex;
-    justify-content: space-between;
+    margin-top: 50px;
 }
-.skills-title .title{
-    font-size: 25px;
-    font-weight: bold;
-    padding-bottom: 10px;
-    color: #fff;
-    
+.main .left-item img{
+    width: 400px;
+    height: 400px;
+    border-radius: 15px;
+    border: 3px solid #7cf03d ;
 }
-.skills-title{
-    padding: 10px 50px;
-    background-color: #ffffff55;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-    border-radius: 20px;
-    cursor: pointer;
+.main .right-item{
+    padding-left: 50px;
 }
-.skills-title .title span{
+.main .right-item h3{
+    font-size: 27px;
+    line-height: 1.5;
     color: #7cf03d;
 }
-.skills-item{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+.main .right-item p{
+    line-height: 1.5;
+    color: #fff;
+    font-weight:700d ;
+}
+.main .right-item h2 {
+    color: #7cf03d;
+    font-size: 35px;
+    margin-block-end: 2%;
+    margin-top: 8px;
+}
+.main .right-item h3{
+    color: #7cf03d;
     font-size: 20px;
-    padding-left: 10px;
-    cursor: pointer;
-    transition: all 0.5s;
 }
-.skills-item:hover{
-    background: transparent;
+.main .right-item .info .date {
+    margin: 10px 0;
+    background-color: #7cf03d76;
+    width: 21%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+/* start services section  */
+.services{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 30px;
+}
+.services .container{
+    width: 90%;
+}
+.services .main-contant {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 25px 20px;
+    margin: 2% auto;
+    padding: 5% 0;
+}
+.services .main-contant .item {
+    padding: 12px 15px;
+    background-color: rgba(0, 0, 0, 0.207);
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    gap: 0 30px;
+    margin: 0 auto;
+    color: white;
+    line-height: 1.5;
+    overflow: hidden;
+    transition: all 1s;
+    cursor: pointer;
+    z-index: 1;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+.left-item i{
+    font-size: 40px;
     color: #7cf03d;
-    font-size: 30px;
+}
+.main-contant .item:hover{
+    background: transparent;
+    color: #fff;
+}
+/* end services section  */
+ /* end section about me */
+/* start section skills */
+.skills{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 30px;
+}
+.skills .container{
+    width: 90%;
+}
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+.header .left-header h3 {
+    font-size: 27px;
+    line-height: 1.5;
+    color: #fff;
+}
+.header .left-header #line{
+    color: #7cf03d;
+}
+.main-contant .name h2 {
+    text-align: center;
+    margin: 0 auto;
+    color: #fff;
+}
+.skills .all-skills {
+    margin: 3% auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    cursor: pointer;
+    width: 55%;
+}
+.header .main-contant{
+    text-align: center;
+    margin: 0 auto;
+}
+.skills .all-skills .skill-img {
+    width: 90px;
+    height: 90px;
+    border: 3px solid transparent;
+    transition: all .5s;
+    padding: 2%;
+}
+.skills .all-skills .skill-img:hover{
+    border: 3px solid #7cf03d;
+    border-radius: 15px;
+    width: 60px;
+    height: 60px;
+}
+.skills .all-skills .skill-img img{
+    width: 100%;
+}
+.header span {
+    background-color: #7cf03d;
+    width: 60px;
+    height: 60px;
+    padding: 15px;
+    text-align: center;
+    border: 1px solid #7cf03d;
+    display: inline-block;
+    display: flex
+;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
 }
 /* end section slills*/
+/* MY-WORKS STARTS */
+
+#my-works{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 30px;
+}
+#my-works .container{
+    width: 90%;
+}
+.container-header{
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.container-header-title{
+    color: #fff;
+    line-height: 1.5;
+}
+.container-header-number{
+    background-color: #7cf03d;
+width: 60px;
+height: 60px;
+padding: 15px;
+text-align: center;
+border: 1px solid #7cf03d;
+display: inline-block;
+display: flex;
+;
+justify-content: center;
+align-items: center;
+cursor: pointer;
+transition: all 0.3s ease-in-out;
+}
+.container-header h2 span{
+    color: #7cf03d;
+}
+
+
+#my-works .my-works-content{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 40px 20px;
+}
+
+#my-works .my-works-content .my-works-content-item {
+
+    background-color: #7cf03d;
+    border-radius: 10px;
+    padding: 8px;
+    position: relative;
+    transition: 0.2s linear;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+/* #my-works .my-works-content .my-works-content-item:hover */
+#my-works .my-works-content .my-works-content-item .my-works-content-item-overlay{
+    background-color: #000000ab;
+    position: absolute;
+    inset: 0;
+    transform: scale(0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px; 
+    transition: scale 0.3s linear;
+}
+
+#my-works .my-works-content .my-works-content-item:hover .my-works-content-item-overlay{
+    transform: scale(1);
+}
+
+#my-works .my-works-content .my-works-content-item .my-works-content-item-overlay a{
+    width: 55px;
+    height: 40px;
+    color: #fff;
+    background-color: var(--main-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    transition: 0.3s linear;
+}
+
+#my-works .my-works-content .my-works-content-item .my-works-content-item-overlay a:hover{
+    background-color: var(--secondary-color);
+    color: var(--main-color);
+}
+
+#my-works .my-works-content .my-works-content-item:hover{
+    box-shadow: 0 0 5px 12px #7cf03d;
+
+}
+
+#my-works .my-works-content .my-works-content-item img{
+    height: 300px;
+    object-fit: cover;
+    /* object-position: center; */
+}
+
+/* MY-WORKS END */
 /* start section contact */
 .contact{
     text-align: center;
@@ -322,6 +481,8 @@ a{
 }
 .contact-me .container{
     width: 90%;
+}
+.home-contact{
     display: flex;
     justify-content: space-between;
 }
@@ -425,95 +586,8 @@ a{
     margin-left: 0;
 }
 }
-/* MY-WORKS STARTS */
-
-#my-works{
-    background-color:#1f242d;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 30px;
-}
-#my-works .container{
-    width: 90%;
-}
-.container-header h2{
-    color: #fff;
-    margin-top: 50px;
-    text-align: center;
-    margin: 0 auto;
-}
-.container-header h2 span{
-    color: #7cf03d;
-}
-
-
-#my-works .my-works-content{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 40px 20px;
-}
-
-#my-works .my-works-content .my-works-content-item {
-
-    background-color: #7cf03d;
-    border-radius: 10px;
-    padding: 8px;
-    position: relative;
-    transition: 0.2s linear;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-/* #my-works .my-works-content .my-works-content-item:hover */
- #my-works .my-works-content .my-works-content-item .my-works-content-item-overlay{
-    background-color: #000000ab;
-    position: absolute;
-    inset: 0;
-    transform: scale(0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 4px; 
-    transition: scale 0.3s linear;
-}
-
-#my-works .my-works-content .my-works-content-item:hover .my-works-content-item-overlay{
-    transform: scale(1);
-}
-
-#my-works .my-works-content .my-works-content-item .my-works-content-item-overlay a{
-    width: 55px;
-    height: 40px;
-    color: #fff;
-    background-color: var(--main-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    transition: 0.3s linear;
-}
-
-#my-works .my-works-content .my-works-content-item .my-works-content-item-overlay a:hover{
-    background-color: var(--secondary-color);
-    color: var(--main-color);
-}
-
-#my-works .my-works-content .my-works-content-item:hover{
-    box-shadow: 0 0 5px 12px #7cf03d;
-
-}
-
-#my-works .my-works-content .my-works-content-item img{
-    height: 300px;
-    object-fit: cover;
-    /* object-position: center; */
-}
-
-/* MY-WORKS END */
 /* end section contact */
-/* start section footer */
+/* start footer section */
 footer{
     width: 100%;
     display: flex;
@@ -562,3 +636,4 @@ footer .container{
 .up.show {
     right: 20px;
 }
+/* end footer section */
